# hamer-mini

./: .gitignore  LICENSE  README.md  demo.py  demo_video.py  pyproject.toml
hamer_mini/: __init__.py
hamer_mini/detectors/: body_detector.py  utils_detectron2.py  vitpose_model.py
hamer_mini/detectors/configs/: cascade_mask_rcnn_vitdet_h_75ep.py
hamer_mini/detectors/configs/vitpose/: ViTPose_huge_wholebody_256x192.py
hamer_mini/detectors/configs/vitpose/_base_/: default_runtime.py
hamer_mini/detectors/configs/vitpose/_base_/datasets/: coco_wholebody.py
hamer_mini/models/: hamer.py  mano_head.py  mano_wrapper.py  pose_transformer.py  t_cond_mlp.py  vit.py
hamer_mini/pipelines/: hamer_hand_pose3d_estimation_pipeline.py
hamer_mini/utils/: geometry.py  logger.py  rotations.py  utils.py
tests/: test_pipeline.py
