[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hamer-mini"
version = "0.1.0"
description = "Minimal, pip-installable inference library for HaMeR 3D hand mesh recovery"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.11"
keywords = ["hand-pose", "3d-hand", "mano", "hamer", "computer-vision"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24,<2",
    "opencv-python>=4.8",
    "smplx==0.1.28",
    "chumpy",
    "timm>=0.9",
    "einops>=0.7",
    "roma>=1.4",
    "huggingface_hub>=0.23",
    "scikit-image>=0.21",
    # Detection stage (same as the original HaMeR demo)
    "detectron2==0.6",
    "mmcv==1.3.9",
    "mmpose==0.24.0",
    "xtcocotools>=1.12",
    # mmcv 1.3.9 requires pkg_resources, which was removed in setuptools 81
    "setuptools<81",
]

[project.urls]
Homepage = "https://github.com/ryhara/hamer-mini"
Source = "https://github.com/ryhara/hamer-mini"

[project.optional-dependencies]
render = [
    "pyrender>=0.1.45",
    "trimesh>=4.12.2",
]

[tool.setuptools.packages.find]
include = ["hamer_mini*"]

[tool.setuptools.package-data]
"hamer_mini.detectors" = ["configs/**/*.py"]

[tool.uv]
# Opt in to preview features: extra-build-dependencies below is experimental and
# warns unless preview mode is enabled ('preview-features' is not yet supported
# as a pyproject setting in uv 0.8)
preview = true
dependency-metadata = [
    { name = "chumpy", version = "0.71", requires-dist = ["scipy", "six"] },
    { name = "detectron2", version = "0.6", requires-dist = ["black", "cloudpickle", "fvcore", "hydra-core", "iopath", "matplotlib", "omegaconf", "packaging", "pillow", "pycocotools", "tabulate", "tensorboard", "termcolor", "tqdm", "yacs"] },
]

[tool.uv.extra-build-dependencies]
chumpy = ["pip"]
# detectron2's setup.py imports torch
detectron2 = ["torch", "setuptools"]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "torchvision-cu118" }
chumpy = { git = "https://github.com/mattloper/chumpy.git", rev = "580566eafc9ac68b2614b64d6f7aaa84eebb70da" }
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git", rev = "02b5c4e295e990042a714712c21dc79b731e8833" }
# ViTPose is a fork of mmpose that adds the ViT backbone
mmpose = { git = "https://github.com/ViTAE-Transformer/ViTPose.git", rev = "d5216452796c90c6bc29f5c5ec0bdba94366768a" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "torchvision-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
